Fixed UI on mobile screen

--- a/Web/src/style.css
+++ b/Web/src/style.css
@@ -110,3 +110,24 @@
   max-width: 300px !important;
   white-space: break-spaces !important;
 }
+
+.modal-close{
+  display: none !important;
+}
+
+@media screen and (max-width: 400px) {
+  .chakra-modal__content,
+  .css-xfd71j {
+    max-width: auto !important;
+    margin-bottom: 0 !important;
+    margin-right: 0 !important;
+    /* z-index: 5 !important; */
+  }
+  .chat-widget-opener {
+    z-index: 1;
+  }
+  .modal-close{
+    display:flex !important;
+  }
+}
+
